# quarks

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.sh  src.asm
docs/: grammer.md
include/: arenaAllocator.hpp  common.hpp  generation.hpp  parser.hpp  tokenization.hpp
learn/: AbstractSyntaxTree.cpp
sample/: test.qs
src/: main  main.cpp
